add hash tools
