# src/server/swagger/docs/openapi.json
@@ -20,28 +20,7 @@
     }
   ],
   "paths": {
-    "/v1/oauth/token": {
-      "post": {
-        "responses": {},
-        "tags": [
-          "OAuth"
-        ],
-        "summary": "OAuth登录",
-        "description": " OAuth login",
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/OAuthLogin"
-              }
-            }
-          },
-          "required": true
-        },
-        "security": null
-      }
-    },
-    "/v1/register/check_user": {
+    "/v1/accounts/check_user": {
       "get": {
         "responses": {
           "200": {
@@ -56,7 +35,7 @@
           }
         },
         "tags": [
-          "Register"
+          "Accounts"
         ],
         "summary": "检查用户名是否已注册",
         "description": " 检查用户名",
@@ -76,7 +55,28 @@
         "security": null
       }
     },
-    "/v1/register/register": {
+    "/v1/accounts/login": {
+      "post": {
+        "responses": {},
+        "tags": [
+          "Accounts"
+        ],
+        "summary": "登录",
+        "description": " login",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Login"
+              }
+            }
+          },
+          "required": true
+        },
+        "security": null
+      }
+    },
+    "/v1/accounts/register": {
       "post": {
         "responses": {
           "200": {
@@ -91,7 +91,7 @@
           }
         },
         "tags": [
-          "Register"
+          "Accounts"
         ],
         "summary": "注册新用户",
         "description": " - 用户名\n- 密码\n- 邮箱",
@@ -108,24 +108,24 @@
         "security": null
       }
     },
-    "/v1/test/hello": {
+    "/v1/test/hash_password": {
       "get": {
         "responses": {},
         "tags": [
           "Test"
         ],
-        "summary": "Hello",
-        "description": " Just Hello",
+        "summary": "Hash Password",
+        "description": " Hash Password",
         "parameters": [
           {
-            "name": "key",
+            "name": "text",
             "in": "query",
-            "description": "key here",
+            "description": "text here",
             "required": true,
             "schema": {
               "type": "string",
               "format": "string",
-              "description": "key here"
+              "description": "text here"
             }
           }
         ],
@@ -262,7 +262,7 @@
   },
   "components": {
     "schemas": {
-      "OAuthLogin": {
+      "Login": {
         "type": "object",
         "required": [
           "username",
@@ -273,9 +273,6 @@
             "type": "string"
           },
           "password": {
-            "type": "string"
-          },
-          "grant_type": {
             "type": "string"
           }
         }
